--- a/VIENA_FINAL/VIENA_FINAL/estilos/footer.css
+++ b/VIENA_FINAL/VIENA_FINAL/estilos/footer.css
@@ -9,7 +9,7 @@ body {
 }
 
 .pie {
-    background: #140b5c;
+    background: rgb(28,28,28);
 }
 
 img {
@@ -122,7 +122,7 @@ button {
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    background: #0a0433;
+    background: rgb(299, 47, 66);
     color: white;
 }
 .whatsapp-button {
